protobuf-parser/src/main/java/org/reploop/parser/protobuf/base/ProtobufBaseParser.java
// Generated from com/reploop/walle/parser/protobuf/base/ProtobufBase.g4 by ANTLR 4.8
package org.reploop.parser.protobuf.base;

import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ProtobufBaseParser extends Parser {

    public static final int T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
            T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17, T__17 = 18,
            T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22, T__22 = 23, FieldModifier = 24, ScalarType = 25,
            BOOL_LITERAL = 26, FLOAT = 27, ID = 28, INT = 29, STRING = 30, LINE_COMMENT = 31, COMMENT = 32, WS = 33;
    public static final int RULE_program = 0, RULE_header = 1, RULE_syntax = 2, RULE_namespace = 3, RULE_include = 4,
            RULE_message = 5, RULE_option = 6, RULE_pair = 7, RULE_enumeration = 8, RULE_nameIndex = 9, RULE_field = 10,
            RULE_fieldName = 11, RULE_multiOptions = 12, RULE_value = 13, RULE_fieldType = 14, RULE_extensions = 15,
            RULE_extend = 16, RULE_service = 17, RULE_function = 18;
    public static final String[] ruleNames = makeRuleNames();
    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    public static final ATN _ATN = new ATNDeserializer().deserialize(_serializedATN.toCharArray());
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
    private static final String[] _LITERAL_NAMES = makeLiteralNames();
    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    static {
        RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION);
    }

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }

    public ProtobufBaseParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    private static String[] makeRuleNames() {
        return new String[]{"program", "header", "syntax", "namespace", "include", "message", "option", "pair",
                "enumeration", "nameIndex", "field", "fieldName", "multiOptions", "value", "fieldType", "extensions",
                "extend", "service", "function"};
    }

    private static String[] makeLiteralNames() {
        return new String[]{null, "';'", "'package'", "'import'", "'message'", "'{'", "'}'", "'option'", "'('", "')'",
                "'.'", "'='", "'default'", "'enum'", "'syntax'", "'['", "','", "']'", "'extensions'", "'to'",
                "'extend'", "'service'", "'rpc'", "'returns'"};
    }

    private static String[] makeSymbolicNames() {
        return new String[]{null, null, null, null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, "FieldModifier", "ScalarType", "BOOL_LITERAL",
                "FLOAT", "ID", "INT", "STRING", "LINE_COMMENT", "COMMENT", "WS"};
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "ProtobufBase.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public final ProgramContext program() throws RecognitionException {
        ProgramContext _localctx = new ProgramContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_program);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(42);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0
                        && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__6) | (1L << STRING))) != 0)) {
                    {
                        setState(40);
                        _errHandler.sync(this);
                        switch (_input.LA(1)) {
                            case T__6: {
                                setState(38);
                                option();
                            }
                            break;
                            case T__1:
                            case T__2:
                            case STRING: {
                                setState(39);
                                header();
                            }
                            break;
                            default:
                                throw new NoViableAltException(this);
                        }
                    }
                    setState(44);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(49);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        setState(49);
                        _errHandler.sync(this);
                        switch (_input.LA(1)) {
                            case T__3: {
                                setState(45);
                                message();
                            }
                            break;
                            case T__12: {
                                setState(46);
                                enumeration();
                            }
                            break;
                            case T__20: {
                                setState(47);
                                service();
                            }
                            break;
                            case T__19: {
                                setState(48);
                                extend();
                            }
                            break;
                            default:
                                throw new NoViableAltException(this);
                        }
                    }
                    setState(51);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                while ((((_la) & ~0x3f) == 0
                        && ((1L << _la) & ((1L << T__3) | (1L << T__12) | (1L << T__19) | (1L << T__20))) != 0));
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final HeaderContext header() throws RecognitionException {
        HeaderContext _localctx = new HeaderContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_header);
        try {
            setState(56);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case T__1:
                    _localctx = new NamespaceDefinitionContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(53);
                    namespace();
                }
                break;
                case T__2:
                    _localctx = new IncludeDefinitionContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(54);
                    include();
                }
                break;
                case STRING:
                    _localctx = new SyntaxDefinitionContext(_localctx);
                    enterOuterAlt(_localctx, 3);
                {
                    setState(55);
                    syntax();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final SyntaxContext syntax() throws RecognitionException {
        SyntaxContext _localctx = new SyntaxContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_syntax);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(58);
                match(STRING);
                setState(59);
                match(T__0);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final NamespaceContext namespace() throws RecognitionException {
        NamespaceContext _localctx = new NamespaceContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_namespace);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(61);
                match(T__1);
                setState(62);
                match(ID);
                setState(63);
                match(T__0);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final IncludeContext include() throws RecognitionException {
        IncludeContext _localctx = new IncludeContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_include);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(65);
                match(T__2);
                setState(66);
                match(STRING);
                setState(67);
                match(T__0);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final MessageContext message() throws RecognitionException {
        MessageContext _localctx = new MessageContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_message);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(69);
                match(T__3);
                setState(70);
                match(ID);
                setState(71);
                match(T__4);
                setState(78);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        setState(78);
                        _errHandler.sync(this);
                        switch (_input.LA(1)) {
                            case T__6: {
                                setState(72);
                                option();
                            }
                            break;
                            case T__3: {
                                setState(73);
                                message();
                            }
                            break;
                            case T__12: {
                                setState(74);
                                enumeration();
                            }
                            break;
                            case T__9:
                            case FieldModifier:
                            case ScalarType:
                            case ID: {
                                setState(75);
                                field();
                            }
                            break;
                            case T__19: {
                                setState(76);
                                extend();
                            }
                            break;
                            case T__17: {
                                setState(77);
                                extensions();
                            }
                            break;
                            default:
                                throw new NoViableAltException(this);
                        }
                    }
                    setState(80);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                while ((((_la) & ~0x3f) == 0
                        && ((1L << _la) & ((1L << T__3) | (1L << T__6) | (1L << T__9) | (1L << T__12) | (1L << T__17)
                        | (1L << T__19) | (1L << FieldModifier) | (1L << ScalarType) | (1L << ID))) != 0));
                setState(82);
                match(T__5);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final OptionContext option() throws RecognitionException {
        OptionContext _localctx = new OptionContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_option);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(84);
                match(T__6);
                setState(85);
                pair();
                setState(86);
                match(T__0);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final PairContext pair() throws RecognitionException {
        PairContext _localctx = new PairContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_pair);
        int _la;
        try {
            setState(103);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case T__7:
                    _localctx = new OptionPairContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(88);
                    match(T__7);
                    setState(89);
                    ((OptionPairContext) _localctx).name = match(ID);
                    setState(90);
                    match(T__8);
                    setState(93);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la == T__9) {
                        {
                            setState(91);
                            match(T__9);
                            setState(92);
                            ((OptionPairContext) _localctx).attr = match(ID);
                        }
                    }

                    setState(95);
                    match(T__10);
                    setState(96);
                    value();
                }
                break;
                case T__11:
                    _localctx = new DefaultPairContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(97);
                    match(T__11);
                    setState(98);
                    match(T__10);
                    setState(99);
                    value();
                }
                break;
                case ID:
                    _localctx = new CommonPairContext(_localctx);
                    enterOuterAlt(_localctx, 3);
                {
                    setState(100);
                    match(ID);
                    setState(101);
                    match(T__10);
                    setState(102);
                    value();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final EnumerationContext enumeration() throws RecognitionException {
        EnumerationContext _localctx = new EnumerationContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_enumeration);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(105);
                match(T__12);
                setState(106);
                match(ID);
                setState(107);
                match(T__4);
                setState(109);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(108);
                            nameIndex();
                        }
                    }
                    setState(111);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                while (_la == ID);
                setState(113);
                match(T__5);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final NameIndexContext nameIndex() throws RecognitionException {
        NameIndexContext _localctx = new NameIndexContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_nameIndex);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(115);
                match(ID);
                setState(116);
                match(T__10);
                setState(117);
                match(INT);
                setState(119);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__14) {
                    {
                        setState(118);
                        multiOptions();
                    }
                }

                setState(121);
                match(T__0);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final FieldContext field() throws RecognitionException {
        FieldContext _localctx = new FieldContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_field);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(124);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == FieldModifier) {
                    {
                        setState(123);
                        match(FieldModifier);
                    }
                }

                setState(126);
                fieldType();
                setState(127);
                fieldName();
                setState(128);
                match(T__10);
                setState(129);
                match(INT);
                setState(131);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__14) {
                    {
                        setState(130);
                        multiOptions();
                    }
                }

                setState(133);
                match(T__0);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final FieldNameContext fieldName() throws RecognitionException {
        FieldNameContext _localctx = new FieldNameContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_fieldName);
        try {
            setState(139);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case T__13:
                    _localctx = new SyntaxNameContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(135);
                    match(T__13);
                }
                break;
                case T__1:
                    _localctx = new PackageNameContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(136);
                    match(T__1);
                }
                break;
                case T__3:
                    _localctx = new MessageNameContext(_localctx);
                    enterOuterAlt(_localctx, 3);
                {
                    setState(137);
                    match(T__3);
                }
                break;
                case ID:
                    _localctx = new IdNameContext(_localctx);
                    enterOuterAlt(_localctx, 4);
                {
                    setState(138);
                    match(ID);
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final MultiOptionsContext multiOptions() throws RecognitionException {
        MultiOptionsContext _localctx = new MultiOptionsContext(_ctx, getState());
        enterRule(_localctx, 24, RULE_multiOptions);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(141);
                match(T__14);
                setState(142);
                pair();
                setState(147);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__15) {
                    {
                        {
                            setState(143);
                            match(T__15);
                            setState(144);
                            pair();
                        }
                    }
                    setState(149);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(150);
                match(T__16);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ValueContext value() throws RecognitionException {
        ValueContext _localctx = new ValueContext(_ctx, getState());
        enterRule(_localctx, 26, RULE_value);
        try {
            setState(157);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case INT:
                    _localctx = new IntValueContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(152);
                    match(INT);
                }
                break;
                case FLOAT:
                    _localctx = new FloatValueContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(153);
                    match(FLOAT);
                }
                break;
                case BOOL_LITERAL:
                    _localctx = new BoolValueContext(_localctx);
                    enterOuterAlt(_localctx, 3);
                {
                    setState(154);
                    match(BOOL_LITERAL);
                }
                break;
                case STRING:
                    _localctx = new StringValueContext(_localctx);
                    enterOuterAlt(_localctx, 4);
                {
                    setState(155);
                    match(STRING);
                }
                break;
                case ID:
                    _localctx = new StructValueContext(_localctx);
                    enterOuterAlt(_localctx, 5);
                {
                    setState(156);
                    match(ID);
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final FieldTypeContext fieldType() throws RecognitionException {
        FieldTypeContext _localctx = new FieldTypeContext(_ctx, getState());
        enterRule(_localctx, 28, RULE_fieldType);
        int _la;
        try {
            setState(164);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case ScalarType:
                    _localctx = new PrimitiveTypeContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(159);
                    match(ScalarType);
                }
                break;
                case T__9:
                case ID:
                    _localctx = new MessageOrEnumTypeContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(161);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la == T__9) {
                        {
                            setState(160);
                            match(T__9);
                        }
                    }

                    setState(163);
                    match(ID);
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ExtensionsContext extensions() throws RecognitionException {
        ExtensionsContext _localctx = new ExtensionsContext(_ctx, getState());
        enterRule(_localctx, 30, RULE_extensions);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(166);
                match(T__17);
                setState(167);
                ((ExtensionsContext) _localctx).from = match(INT);
                setState(168);
                match(T__18);
                setState(169);
                ((ExtensionsContext) _localctx).to = match(ID);
                setState(170);
                match(T__0);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ExtendContext extend() throws RecognitionException {
        ExtendContext _localctx = new ExtendContext(_ctx, getState());
        enterRule(_localctx, 32, RULE_extend);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(172);
                match(T__19);
                setState(173);
                match(ID);
                setState(174);
                match(T__4);
                setState(176);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(175);
                            field();
                        }
                    }
                    setState(178);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                while ((((_la) & ~0x3f) == 0 && ((1L << _la)
                        & ((1L << T__9) | (1L << FieldModifier) | (1L << ScalarType) | (1L << ID))) != 0));
                setState(180);
                match(T__5);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ServiceContext service() throws RecognitionException {
        ServiceContext _localctx = new ServiceContext(_ctx, getState());
        enterRule(_localctx, 34, RULE_service);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(182);
                match(T__20);
                setState(183);
                match(ID);
                setState(184);
                match(T__4);
                setState(187);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        setState(187);
                        _errHandler.sync(this);
                        switch (_input.LA(1)) {
                            case T__6: {
                                setState(185);
                                option();
                            }
                            break;
                            case T__21: {
                                setState(186);
                                function();
                            }
                            break;
                            default:
                                throw new NoViableAltException(this);
                        }
                    }
                    setState(189);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                while (_la == T__6 || _la == T__21);
                setState(191);
                match(T__5);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final FunctionContext function() throws RecognitionException {
        FunctionContext _localctx = new FunctionContext(_ctx, getState());
        enterRule(_localctx, 36, RULE_function);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(193);
                match(T__21);
                setState(194);
                match(ID);
                setState(195);
                match(T__7);
                setState(196);
                ((FunctionContext) _localctx).requestType = fieldType();
                setState(197);
                match(T__8);
                setState(198);
                match(T__22);
                setState(199);
                match(T__7);
                setState(200);
                ((FunctionContext) _localctx).responseType = fieldType();
                setState(201);
                match(T__8);
                setState(213);
                _errHandler.sync(this);
                switch (_input.LA(1)) {
                    case T__0: {
                        setState(202);
                        match(T__0);
                    }
                    break;
                    case T__4:
                    case T__5:
                    case T__6:
                    case T__21: {
                        setState(211);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        if (_la == T__4) {
                            {
                                setState(203);
                                match(T__4);
                                setState(207);
                                _errHandler.sync(this);
                                _la = _input.LA(1);
                                while (_la == T__6) {
                                    {
                                        {
                                            setState(204);
                                            option();
                                        }
                                    }
                                    setState(209);
                                    _errHandler.sync(this);
                                    _la = _input.LA(1);
                                }
                                setState(210);
                                match(T__5);
                            }
                        }

                    }
                    break;
                    default:
                        throw new NoViableAltException(this);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ProgramContext extends ParserRuleContext {

        public ProgramContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public List<OptionContext> option() {
            return getRuleContexts(OptionContext.class);
        }

        public OptionContext option(int i) {
            return getRuleContext(OptionContext.class, i);
        }

        public List<HeaderContext> header() {
            return getRuleContexts(HeaderContext.class);
        }

        public HeaderContext header(int i) {
            return getRuleContext(HeaderContext.class, i);
        }

        public List<MessageContext> message() {
            return getRuleContexts(MessageContext.class);
        }

        public MessageContext message(int i) {
            return getRuleContext(MessageContext.class, i);
        }

        public List<EnumerationContext> enumeration() {
            return getRuleContexts(EnumerationContext.class);
        }

        public EnumerationContext enumeration(int i) {
            return getRuleContext(EnumerationContext.class, i);
        }

        public List<ServiceContext> service() {
            return getRuleContexts(ServiceContext.class);
        }

        public ServiceContext service(int i) {
            return getRuleContext(ServiceContext.class, i);
        }

        public List<ExtendContext> extend() {
            return getRuleContexts(ExtendContext.class);
        }

        public ExtendContext extend(int i) {
            return getRuleContext(ExtendContext.class, i);
        }

        @Override
        public int getRuleIndex() {
            return RULE_program;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ProtobufBaseListener)
                ((ProtobufBaseListener) listener).enterProgram(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ProtobufBaseListener)
                ((ProtobufBaseListener) listener).exitProgram(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof ProtobufBaseVisitor)
                return ((ProtobufBaseVisitor<? extends T>) visitor).visitProgram(this);
            else
                return visitor.visitChildren(this);
        }

    }

    public static class HeaderContext extends ParserRuleContext {

        public HeaderContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public HeaderContext() {
        }

        @Override
        public int getRuleIndex() {
            return RULE_header;
        }

        public void copyFrom(HeaderContext ctx) {
            super.copyFrom(ctx);
        }

    }

    public static class SyntaxDefinitionContext extends HeaderContext {

        public SyntaxDefinitionContext(HeaderContext ctx) {
            copyFrom(ctx);
        }

        public SyntaxContext syntax() {
            return getRuleContext(SyntaxContext.class, 0);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ProtobufBaseListener)
                ((ProtobufBaseListener) listener).enterSyntaxDefinition(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ProtobufBaseListener)
                ((ProtobufBaseListener) listener).exitSyntaxDefinition(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof ProtobufBaseVisitor)
                return ((ProtobufBaseVisitor<? extends T>) visitor).visitSyntaxDefinition(this);
            else
                return visitor.visitChildren(this);
        }

    }

    public static class IncludeDefinitionContext extends HeaderContext {

        public IncludeDefinitionContext(HeaderContext ctx) {
            copyFrom(ctx);
        }

        public IncludeContext include() {
            return getRuleContext(IncludeContext.class, 0);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ProtobufBaseListener)
                ((ProtobufBaseListener) listener).enterIncludeDefinition(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ProtobufBaseListener)
                ((ProtobufBaseListener) listener).exitIncludeDefinition(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof ProtobufBaseVisitor)
                return ((ProtobufBaseVisitor<? extends T>) visitor).visitIncludeDefinition(this);
            else
                return visitor.visitChildren(this);
        }

    }

    public static class NamespaceDefinitionContext extends HeaderContext {

        public NamespaceDefinitionContext(HeaderContext ctx) {
            copyFrom(ctx);
        }

        public NamespaceContext namespace() {
            return getRuleContext(NamespaceContext.class, 0);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ProtobufBaseListener)
                ((ProtobufBaseListener) listener).enterNamespaceDefinition(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ProtobufBaseListener)
                ((ProtobufBaseListener) listener).exitNamespaceDefinition(this);
        }
